Added frontend unit testing

--- a/src/app/components/pins/pins.component.html
+++ b/src/app/components/pins/pins.component.html
@@ -12,7 +12,7 @@
       <form [formGroup]="pin.formGroup">
         <mat-list-item *ngFor="let asset of pin.assets">
           <button (click)="openUrl(asset.url)" mat-mini-fab color="accent">Go</button>
-          <mat-checkbox [formControlName]="asset._id" labelPosition="before">{{ asset.title }}</mat-checkbox>
+          <mat-checkbox labelPosition="before">{{ asset.title }}</mat-checkbox>
         </mat-list-item>
       </form>
     </mat-list>
